[package]
name = "treevsrepo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3"
anyhow = "1.0"
reqwest = {version = "0.11", features = ["blocking"] }
clap = { version = "3.0", features = ["derive"] }
abbs-meta-apml = { git = "https://github.com/AOSC-Dev/abbs-meta-rs", package = "abbs-meta-apml", rev = "7e6d9b719f2cfaf4dd39550b6cf8674dc7976c63" }
log = "0.4"
env_logger = "0.9"
tokio = { version = "1.17", features = ["rt-multi-thread", "rt", "time"] }
futures = "0.3"