[package]
name = "treevsrepo"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3"
anyhow = "1.0"
reqwest = {version = "0.11", features = ["blocking"] }
clap = { version = "4.2", features = ["derive"] }
abbs-meta-apml = { git = "https://github.com/AOSC-Dev/abbs-meta-rs", package = "abbs-meta-apml", rev = "7e6d9b719f2cfaf4dd39550b6cf8674dc7976c63" }
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.17", features = ["rt-multi-thread", "rt", "time"] }
futures = "0.3"
fancy-regex = "0.11"
nom = "7.1"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
debcontrol = { git = "https://github.com/AOSC-Dev/debcontrol-rs/", rev = "e92376703b20afe1360f3612472f2597029c7475" }
tabled = "0.12"
