[package]
name = "treevsrepo"
version = "0.4.5"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3"
eyre = "0.6"
reqwest = "0.12"
clap = { version = "4.2", features = ["derive"] }
abbs-meta-apml = { git = "https://github.com/AOSC-Dev/abbs-meta-rs", package = "abbs-meta-apml", rev = "4a592937b44e8bb93103edd34eff384169a3248a" }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.17", features = ["rt-multi-thread"] }
futures = "0.3"
fancy-regex = "0.14"
nom = "8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
debcontrol = { git = "https://github.com/AOSC-Dev/debcontrol-rs/", rev = "e92376703b20afe1360f3612472f2597029c7475" }
tabled = { version = "0.20", features = ["ansi"] }
console = "0.15"
